# myweb

./: .gitignore  README.md  docker-compose.yml  todo.md
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  data.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_add_role_spaces_invite.py  0003_chat_history.py  0004_add_is_pinned.py  0005_add_couple_partner_names.py  0006_add_space_type_to_photos.py  0007_make_couple_id_nullable.py  0008_add_couple_features.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: __init__.py  health.py  hello.py
apps/api/app/core/: config.py  deps.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/auth/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/couples/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/media/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/spaces/: models.py  router.py  schemas.py  service.py
apps/api/app/tests/: test_health.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.vue  main.ts
apps/web/src/api/: ai.ts  auth.ts  couples.ts  health.ts  hello.ts  http.ts  imageHost.ts  media.ts
apps/web/src/assets/: theme.css
apps/web/src/composables/: useToast.ts
apps/web/src/router/: index.ts
apps/web/src/stores/: app.ts  auth.ts
apps/web/src/views/: Ai.vue  Album.vue  Couple.vue  (+6 more)
ops/: README.md  start-dev.bat
(+6 files in other folders)
